* Make invoice printable
Version 1.4 - 2015-05-29
* New icons based on state for invoice

Version 1.3 - 2015-01-22
* Add invoice consulation group

Version 1.2 - 2014-07-01
* Changelog file creation