@@ -11,3 +11,4 @@ xml:
     icons.xml
     invoice.xml
     report.xml
+    configuration.xml
